--- a/app/src/main/res/layout/itemlist_itemdalista.xml
+++ b/app/src/main/res/layout/itemlist_itemdalista.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:orientation="vertical">
+    >
 
     <LinearLayout
         android:id="@+id/linear_itenslistas_background"
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Teste do nome"
-            android:textColor="@color/colorPrimary"
+            android:layout_marginStart="10dp"
             android:textSize="14dp"
             android:layout_gravity="center" />
 
@@ -48,14 +48,12 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom">
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
         android:background="@android:color/darker_gray" />
 
-    </LinearLayout>>
+
 </RelativeLayout>
