--- a/app/src/main/res/layout/activity_estoque.xml
+++ b/app/src/main/res/layout/activity_estoque.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".EstoqueActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -13,6 +14,14 @@
         android:elevation="0dp"
         android:paddingBottom="80dp" />
 
+    <TextView
+        android:id="@+id/textNumero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_fabteste"
         android:layout_width="wrap_content"
@@ -22,4 +31,16 @@
         android:layout_margin="18dp"
         android:clickable="true"/>
 
-</FrameLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingButtom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="#8BC34A"
+        android:layout_marginBottom="18dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginTop="18dp"
+        android:clickable="true"/>
+
+</RelativeLayout>
