--- a/app/src/main/res/layout/itemlist_itemdalista.xml
+++ b/app/src/main/res/layout/itemlist_itemdalista.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    >
+    android:layout_height="80dp">
 
     <LinearLayout
         android:id="@+id/linear_itenslistas_background"
@@ -10,41 +9,98 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textview_id"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Teste do nome"
-            android:layout_marginStart="10dp"
-            android:textSize="14dp"
-            android:layout_gravity="center" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textview_nome"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:text="Código"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/textview_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Teste do nome"
+                android:textSize="14dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Teste do nome"
-            android:textSize="14dp"
-            android:layout_gravity="center" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textview_quat"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:text="Nome"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/textview_nome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Teste do nome"
+                android:textSize="14dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Teste do nome"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_gravity="center" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textview_preco"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:text="Quant."
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/textview_quat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Teste do nome" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Teste do nome"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_gravity="center" />
+            android:orientation="vertical">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:text="Preço"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/textview_preco"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Teste do nome" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
