--- a/app/src/main/res/layout/activity_comprar.xml
+++ b/app/src/main/res/layout/activity_comprar.xml
@@ -29,7 +29,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="deprecated, and the whole api of converting from R.color to color code #xxxxxx, is cumbersome to the extent that it seems much better to just hardcode the color code. Why is it so complex?"
+            android:text="deprecatedçãéêéçêã, and the whole api of converting from R.color to color code #xxxxxx, is cumbersome to the extent that it seems much better to just hardcode the color code. Why is it so complex?"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
