--- a/app/src/main/res/layout/activity_comprar.xml
+++ b/app/src/main/res/layout/activity_comprar.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ComprarActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ComprarActivity">
@@ -57,5 +57,5 @@
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
